# wasm_resize_rgba

./: Cargo.toml  LICENSE  README.md  cr.wasm  hammer.wasm  resize.d.ts  resize.d.ts.br  resize.mjs  resize.mjs.br  resize.wasm  resize.wasm.br  resize_for_importScripts.js  resize_for_importScripts.js.br  resize_worker.d.ts  resize_worker.d.ts.br  resize_worker.mjs  resize_worker.mjs.br  resize_worker_script.js  resize_worker_script.js.br  resize_worker_script.mjs  resize_worker_script.mjs.br  rgba.wasm  test.html  test_bee.html  test_jellyfish.html
src/: dynamic_image_view.rs  errors.rs  image.rs  image_view.rs  lib.rs  pixels.rs  resizer.rs  wasm32_utils.rs
src/alpha/: common.rs  mod.rs
src/alpha/u8x4/: mod.rs  native.rs
src/color/: mod.rs
src/convolution/: filters.rs  mod.rs  optimisations.rs
src/convolution/u8x4/: mod.rs  wasm32.rs
src/convolution/vertical_u8/: mod.rs  native.rs  wasm32.rs
