[package]
name = "rgba_resize"
version = "0.4.0"
authors = ["programingjd"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.num-traits]
version = "0.2"

[dev-dependencies.image]
version = "0.25"

[profile.release]
debug = false
opt-level = "s"
lto = true
#panic = "abort"
