[package]
name = "wasm_resize_rgba"
version = "0.6.0"
edition = "2024"
authors = ["Jerome David <programingjd@gmail.com>"]
categories = ["wasm","multimedia::images"]
description = "esm modules for image resizing using the CatmullRom (hq) or Hamming methods, with sync and async (worker) versions"
keywords = ["wasm", "image", "resize", "CatmullRom", "Hamming"]
license = "MIT"
repository = "https://github.com/packurl/wasm_resize_rgba"
include = [
    "Cargo.toml", "src", "LICENSE", "README.md",
    "resize.d.ts", "resize.mjs", "resize.wasm",
    "resize_worker.d.ts", "resize_worker.mjs", "resize_worker_script.mjs",
    "resize_worker_script.js", "resize_for_importScript.mjs"
]

[lib]
crate-type = ["cdylib","rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.num-traits]
version = "0.2"

[dev-dependencies.image]
version = "0.25"

[profile.release]
debug = false
opt-level = "s"
lto = true
codegen-units = 1
#panic = "abort"
